# UDC

./: .gitignore  .gitmodules  README.md
Clustering/: README.md  dental_simcse_finding_clusters.ipynb  pyproject.toml  simcse_clustering.ipynb
Embeddings/: README.md
Embeddings/simcse_generation/: dental_generation.ipynb  run_unsup_dental.sh  run_unsup_sts.sh  sts_generation.ipynb
Embeddings/word2vec/: pyproject.toml  word2vec.ipynb
Preprocessing/: Explore.ipynb  README.md  columns_internal_calculation  extract_text_dental.ipynb  extract_text_sts.ipynb  pyproject.toml
Visualization/: Metrics Visualizations.ipynb  Projector.ipynb  README.md  projector.py  pyproject.toml  simcse_data_to_projector.ipynb
Visualization/models/dental_simcse/: events.out.tfevents.1658828071.ub-q4rtf2y8o.23446.4  projector_config.pbtxt
Visualization/runs/Jul20_15-42-08_ub-q4rtf2y8o/: events.out.tfevents.1658324528.ub-q4rtf2y8o.47627.0
Visualization/tensorboard_dir/dental_simcse/: events.out.tfevents.1658166700.ub-q4rtf2y8o.53296.0  projector_config.pbtxt
Visualization/tensorboard_dir/test_simcse/: projector_config.pbtxt
