[tool.poetry]
name = "visualization"
version = "0.1.0"
description = "Visualize the results of the project"
authors = ["TemporalData <63362559+TemporalData@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
tensorboard = "^2.9.1"
jupyter = "^1.0.0"
torch = "^1.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
