[tool.poetry]
name = "word2vec"
version = "0.1.0"
description = "Parsing text into word2vec embeddings"
authors = ["TemporalData <63362559+TemporalData@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
